classblock overlap case done + TODO bugfixing

--- a/src/componetns/timetable/weekday/classBlock/ClassBlock.scss
+++ b/src/componetns/timetable/weekday/classBlock/ClassBlock.scss
@@ -1,6 +1,6 @@
 .classBlock {
     position: absolute;
-    background-color: #302e2e;
+    background-color: #4a6047;
     // padding: 10px;
     // margin-bottom: 10px;
     border-radius: 5px;
